# my-jarvis

./: .env.example  .gitignore  COMPLETE_SYSTEM_OVERVIEW.md  COMPUTER_DIAGNOSTICS_SUMMARY.md  CONVERSATIONAL_JARVIS_GUIDE.md  CONVERSATIONAL_JARVIS_READY.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT.md  DEPLOYMENT_TEST.md  DOCUMENT_AUTOMATION_READY.md  Dockerfile  EMAIL_SETUP_GUIDE.md  FINAL_CHECKLIST.md  FINAL_FIXES_APPLIED.md  FINAL_SUMMARY.md  FIX_MICROPHONE.md  FULL_COMPUTER_CONTROL.md  GITHUB_PUBLISH_NOW.md  HOW_TO_PROCESS_EMAIL.md  HOW_TO_START.md  INTEGRATION_EXAMPLE.md  JARVIS_COMPLETE_STATUS.md  JARVIS_FULL_CONTROL_READY.md  LICENSE  MCP_INTEGRATION_READY.md  MICROPHONE_FIX_COMPLETE.md  MONITORING_IMPLEMENTATION.md  MUSIC_PLAYER_FIX.md  MUSIC_PLAYER_READY.md  MUTE_AND_TABS_FIXED.md  Makefile  PROJECT_STATUS.md  PUBLISH_TO_GITHUB.md  QUICKSTART.md  QUICK_START.md  QUICK_START_CONVERSATIONAL_JARVIS.md  README.md  README_START_HERE.md  READY_TO_USE.md  SEND_PROJECT_EMAIL.md  (+94 more)
docs/: api_reference.md  full_stack_automation.md  memory_system_performance_optimizations.md  skill_performance_optimizations.md  skills_architecture.md
jarvis/: __init__.py  __main__.py  audit_logger.py  config.py  encryption.py  error_handling.py  logging_config.py  metrics.py  proactive_suggestions.py
jarvis_skills/: manifest.json
migrations/: 001_add_semantic_search_function.sql
scripts/: README.md  backup.sh  clean.sh  db-shell.sh  dev.sh  health-check.sh  logs.sh  migrate.sh  restore.sh  setup.sh  start.ps1  start.sh  status.sh  stop.ps1  stop.sh  validate-deployment.sh
tests/: __init__.py
(+76 files in other folders)
